public/assets/css/validnavs.css
/* ... */
@keyframes fadeLeft {
	from {
		opacity: 0;
		transform: translate3d(0, 0, 0, -100%);
	}

	to {
		opacity: 1;
		transform: translate3d(0, 0, 0, 0);
	}
}

@media only screen and (max-width: 1023px) {
	nav.navbar.validnavs.mobile-sidenav .navbar-collapse.collapse.collapse-mobile {
		position: fixed;
		left: -485px;
		top: 0;
		width: 400px;
		padding: 30px;
		animation: fadeLeft;
		height: 100%;
		min-height: 100vh;
		background: var(--white) none repeat scroll 0 0;
		overflow-y: scroll;
		-webkit-transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
		-moz-transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
		transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
		z-index: 9999;
	}
}

nav.navbar.validnavs.mobile-sidenav .navbar-collapse.collapse.collapse-mobile ul.nav {
	padding: 0;
}

.collapse-header {
	overflow: hidden;
}

/* Custom layout */

@media only screen and (max-width: 399px) {
	nav.navbar.validnavs.mobile-sidenav .navbar-collapse.collapse.collapse-mobile {
		width: 300px;
	}
}

nav.navbar.validnavs.mobile-sidenav .navbar-collapse.collapse.collapse-mobile.show {
	left: 0;
}

.overlay-screen.opened {
	position: fixed;
	height: 100%;
	width: 100%;
	background: var(--dark);
	opacity: 0.6;
	top: 0;
	left: 0;
	transition: all 0.25s ease-in-out;
}

nav.navbar.validnavs .navbar-collapse.collapse img {
	display: none;
}

nav.navbar.validnavs .navbar-collapse.collapse img {
	margin-bottom: 30px;
}

nav.navbar.validnavs .navbar-collapse.collapse button {
	position: absolute;
	right: 30px;
	margin: 0;
	height: 35px;
	width: 35px;
	line-height: 32px;
	text-align: center;
	border: 1px solid #dddddd;
	border-radius: 50%;
	color: var(--dark);
	font-size: 16px;
	top: 33px;
	padding: 0;
}

nav.navbar.validnavs .navbar-collapse.collapse button i {
	font-weight: 400;
	font-size: 15px;
	margin: 0;
}

.navbar .attr-right.flex .attr-nav {
	display: flex;
	align-items: center;
	justify-content: right;
}

.navbar .attr-right .attr-nav ul.button-double li a {
	padding: 10px;
	display: inline-block;
}

.navbar .attr-right .attr-nav ul.button-double li:last-child a {
	background: var(--bg-gradient) !important;
	border-radius: 5px;
	padding: 10px 30px;
	color: var(--white);
}

.attr-nav .search form {
	position: relative;
	border: 1px solid #e7e7e7;
	border-radius: 5px;
}

.attr-nav .search form input {
	border: none;
	background: transparent;
	padding: 0 15px;
}

.attr-nav .search form button {
	position: absolute;
	right: 0;
	top: 0;
	height: 50px;
	width: 50px;
	border: none;
	background: transparent;
	color: var(--color-heading);
}

@media (min-width: 1024px) {
	.navbar.no-background .attr-nav .search form {
		border: 1px solid rgba(255, 255, 255, 0.2);
	}

	.navbar.no-background .attr-nav .search form input {
		color: var(--white);
	}

	.navbar.no-background .attr-nav .search form button {
		color: var(--white);
	}

	.container-fill .navbar-brand {
		padding-right: 20px;
	}

	.navbar.no-background .attr-nav .search form input::-webkit-input-placeholder {
		/* Chrome/Opera/Safari */
		color: var(--white);
	}

	.navbar.no-background .attr-nav .search form input::-moz-placeholder {
		/* Firefox 19+ */
		color: var(--white);
	}

	.navbar.no-background .attr-nav .search form input:-ms-input-placeholder {
		/* IE 10+ */
		color: var(--white);
	}

	.navbar.no-background .attr-nav .search form input:-moz-placeholder {
		/* Firefox 18- */
		color: var(--white);
	}
}

@media only screen and (max-width: 1023px) {
	nav.navbar.validnavs .navbar-collapse.collapse.show img {
		display: inline-block;
		height: 50px;
	}

	nav.navbar.validnavs .navbar-collapse.collapse img {
		display: inline-block;
		height: 50px;
	}
}

.navbar.navbar-common .attr-right .attr-nav li.contact {
	margin-left: 0;
}

.navbar.navbar-common .attr-right {
	margin-left: 0 !important;
}

.navbar .left-items {
	display: flex;
	align-items: center;
}

.navbar .left-items .navbar-header {
	margin-right: 50px;
}
/* ... */

